# blog

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Leptos.toml  Makefile  ORACLE_DEPLOYMENT.md  Pulumi.dev.yaml  Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  Shuttle.toml  biome.json  bun.lockb  bunfig.toml  clippy.toml  fly.toml  index.ts  input.css  nginx.conf  package-lock.json  package.json  postcss.config.js  railway.toml  render.yaml  rustfmt.toml  tsconfig.json
.github/: SECURITY.md  dependency-review-config.yml
.github/workflows/: ci.yml  codeql.yml  commit.yml  deploy.yml  linter.yml  pre-commit.yml  release.yml  security.yml
app/infra/: BLUE_GREEN_DEPLOYMENT.md  app.ts  apps.ts  cluster.ts  config.ts  deploy.ts  dns.ts  network.ts  registry.ts
app/src/: app.rs  main.rs
app/src/components/: header.rs  mod.rs
app/src/components/post/: interactions.rs  markdown.rs  mod.rs  types.rs
app/src/components/post/code/: mod.rs
app/src/components/ui/: badge.rs  card.rs
app/src/components/ui/life/: canvas.rs  cell.rs
app/src/routes/: home.rs  post.rs
app/src/styles/: global.css  tailwind.css
content/: assets-demo.md  code-blocks-showcase.md
content/posts/: hello-world.md  multimedia-demo.md  rust-web-development.md
posts/: simple-post.md
public/: manifest.json  prism.css
scripts/: deploy.ts  invalidate.ts  sync.ts
src/: app.rs  lib.rs  main.rs
src/components/: header.rs
src/components/post/: card_metrics.rs  card_share_button.rs  header.rs  interactions.rs  markdown.rs  metrics.rs  mod.rs  server.rs  types.rs
src/components/post/code/: executor.rs  mod.rs  runner.rs
src/components/ui/: badge.rs  button.rs  dialog.rs  mod.rs
src/components/ui/life/: canvas.rs  game.rs  mod.rs
src/models/: markdown.rs  mod.rs  post.rs
src/models/components/: header.rs  mod.rs
src/models/components/code/: executor.rs  runner.rs
src/models/components/life/: cell.rs  game.rs
src/models/components/ui/: button.rs  card.rs  dialog.rs  mod.rs
src/routes/: home.rs  post.rs
src/styles/: global.css
